--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
-    "mocha": "^5.0.0",
-    "xmlhttprequest": "^1.8.0"
+    "mocha": "^5.0.0"
+  },
+  "dependencies": {
+    "xmlhttprequest": "file:lib/node-XMLHttpRequest"
   }
 }
