--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "turtlecoin-walletd-rpc-js",
   "version": "0.0.2",
   "description": "Wrapper for the TurtleCoin walletd daemon JSON-RPC interface",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/turtlecoin/turtlecoin-walletd-rpc-js.git"
+  },
   "main": "./dist/index.js",
   "files": [
     "dist"
