--- a/package.json
+++ b/package.json
@@ -40,7 +40,5 @@
     "chai": "^4.1.2",
     "mocha": "^5.0.0"
   },
-  "dependencies": {
-    "xmlhttprequest": "^1.8.0"
-  }
+  "dependencies": {}
 }
