--- a/package.json
+++ b/package.json
@@ -40,5 +40,7 @@
     "chai": "^4.1.2",
     "mocha": "^5.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "browser-request": "^0.3.3"
+  }
 }
